# file-watch

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: index.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/biz/requests/: index.ts
src/biz/services/: index.ts
src/components/FolderIcon/: index.tsx
src/components/GithubIcon/: index.tsx
src/components/ui/: drop-area.tsx  tab-header.tsx
src/domains/http_client/: connect.tauri.ts
src/domains/player/: connect.web.ts
src/domains/storage/: index.ts
src/domains/ui/drag-zone/: index.ts
src/domains/ui/tab-header/: index.ts
src/pages/home/: index.tsx
src/utils/: index.ts
src/utils/bezier/: bezier.ts
